--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -7,6 +7,7 @@
 body {
   background: #fff;
   font-family: 'Montserrat', sans-serif;
+  -webkit-font-smoothing: subpixel-antialiased;
 }
 
 .navlink > span.active {
